--- a/src/main/resources/application-oauth.yml
+++ b/src/main/resources/application-oauth.yml
@@ -4,7 +4,7 @@ spring:
       client:
         registration:
           kakao:
-            client-id: clientID
+            client-id:
             redirect-url: "{baseUrl}/{action}/oauth/{registrationId}"
             client-authentication-method: POST
             authorization-grant-type: authorization_code
